build/Desktop_Qt_6_10_1-Debug/vcpkg-manifest-install.log
Failed to load manifest from directory /home/igore/Documents/file-manager-server
/home/igore/Documents/file-manager-server/vcpkg.json:6:5: error: Unexpected character in middle of array
  on expression:     "boost-uuid"
                     ^
